убрал лишний порт

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,10 @@ services:
       dockerfile: client/Dockerfile
     ports:
       - "1080:1080"
+  server:
+    container_name: socks5_proxy_server
+    build:
+      context: .
+      dockerfile: server/Dockerfile
+    ports:
       - "1081:1081"
