--- a/config.json
+++ b/config.json
@@ -2,5 +2,7 @@
     "socks5_server_address": "0.0.0.0:1080",
     "tcp_relay_server_address": "0.0.0.0:1081",
     "udp_relay_server_address": "0.0.0.0:1082",
-    "allow_no_auth": false
+    "allow_no_auth": false,
+    "socks5_web_gui_port": 8080,
+    "relay_web_gui_port": 8081
 }
